# templates

./: .gitignore  README.md
.github/workflows/: main.yml
angular/: leiame.txt  leiame.txt~  mais-exemplos.txt  taulukko-message-example.lnk
ddd/: leiame.txt
flutter/: flutter-version-leiame.txt
html/: details.html  figure.html  map.html  mark.html  media-and-content-queryes.html  modal.html  progressbar.html  shadow-dom.html  wbr.html
java/: java-visual-studio-profile.code-profile
javascript/: angular.lnk
javascript-typescript/: visual-studio-profile.code-profile
jenkins/: run.bat
kafka/: leiame.txt
mariadb/: create_table_proc_fill.sql
powershell/: Microsoft.PowerShell_profile.ps1  folder_compact.ps1
python/: Python-visual-studio-code.code-profile
python/crewai/html_reporter/: Go-Lang-visual-studio-profile.code-profile  README.md  pyproject.toml
python/crewai/html_reporter/knowledge/: user_preference.txt
python/crewai/html_reporter/src/html_reporter/: crew.py  main.py
python/crewai/html_reporter/src/html_reporter/config/: agents.yaml  tasks.yaml
tampermonkey/: Bank Pass.user.js  Chat GPT Utils.user.js  alterar-valor-ao-entrar-generico-multiplos-site.js  alterar-valor-ao-entrar-generico-um-site.js  auto code millenium.user.js  auto-insere-tradutor-dnd.js  fix-googlesheet-bug.js  perplexyty-ocultarbotao-principal.js
violentmonkey/: Remover Vírgulas do Corona Vírus Worldometers.user.js  Remover Vírgulas do Site do Governo.user.js  auto code millenium.user.js  auto code novobanco.user.js  auto-code-millenium.js  remove-task-google.js
(+1935 files in other folders)
