[project]
name = "html_reporter"
version = "0.1.0"
description = "html-translator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3", 
    "pydantic",
    "streamlit",
]

[project.scripts]
html_reporter = "html_reporter.main:run"
run_crew = "html_reporter.main:run"
train = "html_reporter.main:train"
replay = "html_reporter.main:replay"
test = "html_reporter.main:test"
run_with_trigger = "html_reporter.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
